// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrements the counter when clicking the - button 1`] = `
.css-0,
[data-css-0] {
  color: red;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    -1
  </div>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;

exports[`increments the counter when clicking the + button 1`] = `
.css-0,
[data-css-0] {
  color: green;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    1
  </div>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;

exports[`renders disabled buttons 1`] = `
.css-0,
[data-css-0] {
  color: black;
}

<div>
  <button
    data-testid="decrement"
    disabled=""
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    0
  </div>
  <button
    data-testid="increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`renders enabled buttons by default 1`] = `
.css-0,
[data-css-0] {
  color: black;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    0
  </div>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;
